--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ a {color: #333; text-decoration:none;}
 #footer {height: 80px; background: #FBFBFB;}
 
 /* header */
-#header h1 {padding-top: 40px; padding-left: 30px; font-size: 63px; font-weight: 100; font-family: "Epilogue";}
+#header h1 {padding-top: 40px; padding-left: 30px; font-size: 63px; font-weight: 100; font-family: 'Poppins', sans-serif;}
 
 /* contents1 */
 #contents1 > div.banner h2 {text-align: center; font-family: "Rota"; font-weight: 600; font-size: 33px; }
