--- a/style.css
+++ b/style.css
@@ -94,4 +94,4 @@ a {color: #333; text-decoration:none;}
 #contents2 h2 {text-align: center; font-family: "Rota"; font-weight: 600; font-family: 'Noto Sans Display', sans-serif;}
 
 /* footer */
-#footer p {font-family: "Rota"; font-size: 11px; font-style: ; text-align: center; padding-top: 35px;}
+#footer p {font-family: 'Noto Sans Display', sans-serif; font-size: 11px; font-style: ; text-align: center; padding-top: 35px;}
