--- a/osaka.style.css
+++ b/osaka.style.css
@@ -13,14 +13,14 @@ a {color: #333; text-decoration:none;}
 #number2 > div.header2 {float: right; width: 500px; height: 120px; background: #fafafa;}
 
 /* header */
-#number > div.header h2 {padding-left: 450px; padding-top: 60px;font-size: 50px; font-weight: 150; font-family: 'Jost', sans-serif; font-style: italic;}
-#number > div.header2 h1 {padding-right: 450px; padding-top: 60px; font-size: 50px; font-weight: 400; font-family: 'Jost', sans-serif;}
+#number > div.header h2 {padding-left: 450px; padding-top: 60px;font-size: 50px; font-family: 'Jost', sans-serif; font-style: italic;}
+#number > div.header2 h1 {padding-right: 450px; padding-top: 60px; font-size: 50px; font-family: 'Jost', sans-serif;}
 #number2 > div.header h2 {padding-left: 450px; padding-top: px;font-size: 50px; font-weight: 150; font-family: 'Jost', sans-serif; font-style: italic;}
 #number2 > div.header2 h1 {padding-right: 450px; padding-top: px; font-size: 50px; font-weight: 400; font-family: 'Jost', sans-serif;}
 
 /* contents */
 #contents > div.img li img {width: 700px; margin-top: 90px; margin-left: 150px;}
-#contents > div.img li span {display: block; margin-top: 15px; margin-left: 150px; font-size: 14px; font-family: 'Noto Sans KR', sans-serif; font-weight: 100;}
+#contents > div.img li span {display: block; margin-top: 15px; margin-left: 150px; font-size: 14px; font-family: 'Noto Sans KR', sans-serif;}
 
 #contents > div.img1 li img {width: 700px; margin-top: 40px; margin-left: 150px;}
 #contents > div.img1 li span {display: block; margin-top: 9px; margin-left: 150px; font-size: 14px; font-family: 'Noto Sans KR', sans-serif; font-weight: 100;}
