--- a/osaka.style.css
+++ b/osaka.style.css
@@ -13,8 +13,8 @@ a {color: #333; text-decoration:none;}
 #number2 > div.header2 {float: right; width: 500px; height: 120px; background: #fafafa;}
 
 /* header */
-#number > div.header h2 {padding-left: 450px; padding-top: 60px;font-size: 50px; font-family: 'Jost', sans-serif; font-style: italic;}
-#number > div.header2 h1 {padding-right: 450px; padding-top: 60px; font-size: 50px; font-family: 'Jost', sans-serif;}
+#number > div.header h2 {padding-left: 450px; padding-top: 60px;font-size: 50px; font-weight: 150; font-family: 'Jost', sans-serif; font-style: italic;}
+#number > div.header2 h1 {padding-right: 450px; padding-top: 60px; font-size: 50px; font-weight: 400; font-family: 'Jost', sans-serif;}
 #number2 > div.header h2 {padding-left: 450px; padding-top: px;font-size: 50px; font-weight: 150; font-family: 'Jost', sans-serif; font-style: italic;}
 #number2 > div.header2 h1 {padding-right: 450px; padding-top: px; font-size: 50px; font-weight: 400; font-family: 'Jost', sans-serif;}
 
