--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ a {color: #333; text-decoration:none;}
 #header h1 {padding-top: 40px; padding-left: 30px; font-size: 63px; font-weight: 100; font-family: 'Epilogue', sans-serif;}
 
 /* contents1 */
-#contents1 > div.banner h2 {text-align: center; font-weight: 600; font-family: 'Nunito Sans', sans-serif; font-size: 33px; }
+#contents1 > div.banner h2 {text-align: center; font-weight: 400; font-family: 'Nunito Sans', sans-serif; font-size: 33px; }
 
 
 #contents1 > div.imgli0 ul {padding-top: 0px;}
@@ -94,4 +94,4 @@ a {color: #333; text-decoration:none;}
 #contents2 h2 {text-align: center; font-family: "Rota"; font-weight: 600; font-family: 'Nunito Sans', sans-serif;}
 
 /* footer */
-#footer p {font-family: 'Nunito Sans', sans-serif; font-weight: 100; font-size: 11px; font-style: ; text-align: center; padding-top: 35px; color: #777777;}
+#footer p {font-family: 'Nunito Sans', sans-serif; font-weight: 100; font-size: 11px; font-style: ; text-align: center; padding-top: 35px; color: ##313131;}
