--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ a {color: #333; text-decoration:none;}
 #contents1 > div.imgli5 {float: right; width: 450px; height: 430px; background: #fff; margin-top: 60px;}
 #contents1 > div.imgli6 {float: left; width: 450px; height: 430px; background: #fff; margin-top: 60px;}
 #contents2 {margin-top: 2000px; height: 130px; background: #ffF; border-top: 0.8px solid #000; padding-top: 70px; }
-#footer {height: 80px; background: #FBFBFB;}
+#footer {height: 80px; background: #FCFCFC;}
 
 /* header */
 #header h1 {padding-top: 40px; padding-left: 30px; font-size: 63px; font-weight: 100; font-family: 'Epilogue', sans-serif;}
