--- a/tokyo.style.css
+++ b/tokyo.style.css
@@ -5,7 +5,7 @@ a {color: #333; text-decoration:none;}
 .clearfix::before, .clearfix::after {display: block; content: '';clear: both;}
 
 /* layout */
-#wrap {width: 1000px; height: background: #fff; margin: 0 auto;}
+#wrap {width: 1000px; margin-top: 20px; height: background: #fff; margin: 0 auto;}
 #contents {width: 1000px; background: #fafafa; margin: 0 auto;}
 
 #number > div.header {float: left; width: 465px; height: 100px; background: #fafafa;}
