--- a/tokyo.style.css
+++ b/tokyo.style.css
@@ -5,10 +5,10 @@ a {color: #333; text-decoration:none;}
 .clearfix::before, .clearfix::after {display: block; content: '';clear: both;}
 
 /* layout */
-#wrap {width: 1000px; margin-top: 20px; height: background: #fff; margin: 0 auto;}
+#wrap {width: 1000px; height: background: #fff; margin: 0 auto;}
 #contents {width: 1000px; background: #fafafa; margin: 0 auto;}
 
-#audio > div.title {font-size: 10px; font-family: 'Noto Sans KR', sans-serif; font-weight: 300;}
+#audio > div.title {margin-left: 100px; font-size: 10px; font-family: 'Noto Sans KR', sans-serif; font-weight: 300;}
 
 #number > div.header {float: left; width: 465px; height: 100px; background: #fafafa;}
 #number > div.header2 {float: right; width: 465px; height: 100px; background: #fafafa;}
