--- a/tokyo.style.css
+++ b/tokyo.style.css
@@ -8,7 +8,8 @@ a {color: #333; text-decoration:none;}
 #wrap {width: 1000px; height: background: #fff; margin: 0 auto;}
 #contents {width: 1000px; background: #fafafa; margin: 0 auto;}
 
-#audio > div.title {margin-left: 100px; font-size: 10px; font-family: 'Noto Sans KR', sans-serif; font-weight: 300;}
+#audio > div.header {padding-left: 635px;}
+#audio > div.header h1 {font-size: 14px; font-family: 'Noto Sans KR', sans-serif; font-weight: 300;}
 
 #number > div.header {float: left; width: 465px; height: 100px; background: #fafafa;}
 #number > div.header2 {float: right; width: 465px; height: 100px; background: #fafafa;}
