--- a/tokyo.style.css
+++ b/tokyo.style.css
@@ -9,7 +9,7 @@ a {color: #333; text-decoration:none;}
 #contents {width: 1000px; background: #fafafa; margin: 0 auto;}
 
 /* 움직이는 텍스트 */
-.animated-title {font-size: 20px; font-family: 'Noto Sans KR', sans-serif; font-weight: 500; width: 100%; max-width:100%; height: auto; padding:100px 0 0; overflow-x: hidden; overflow-y: hidden;}
+.animated-title {font-size: 20px; font-family: 'Noto Sans KR', sans-serif; font-weight: 500; width: 100%; max-width:100%; height: auto; padding:100px 0 0; overflow-x: hidden; overflow-y: hidden; position: relative;}
 .animated-title .track {position: absolute; white-space: nowrap;will-change: transform;animation: marquee 60s linear infinite; }
 @keyframes marquee {
   from { transform: translateX(0); }
