--- a/style.css
+++ b/style.css
@@ -113,4 +113,4 @@ a {color: #333; text-decoration:none;}
 #contents2 > div.thum3:hover li img { transform: scale(1.4)}
 
 /* footer */
-#footer p {font-family: 'Nunito Sans', sans-serif; font-weight: 100; font-size: 14px; font-style: ; text-align: center; padding-bottom: 10px; color: ##313131;}
+#footer p {font-family: 'Nunito Sans', sans-serif; font-weight: 100; font-size: 14px; font-style: ; text-align: center; padding-bottom: 10px; color: #313131;}
