--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ a {color: #333; text-decoration:none;}
 .clearfix::before, .clearfix::after {display: block; content: '';clear: both;}
 
 /* layout */
-#wrap {width: 900px; height: 3570px; background: #fff; margin: 0 auto;}
+#wrap {width: 900px; height: 4850px; background: #fff; margin: 0 auto;}
 #header {margin-top: 50px;  text-align: center; height: 200px; background: #fff;}
 
 #banner {width: 900px; text-align: center; height: 600px; overflow: hidden;}
@@ -98,19 +98,41 @@ a {color: #333; text-decoration:none;}
                 font-size: 18px; color: #808080; font-weight: 300; font-family: 'Nunito Sans', sans-serif;}
 
 /* contents2 */
-#contents2 > div.banner h2 {text-align: center; font-weight: 400; font-family: 'Nunito Sans', sans-serif; font-size: 35px; }
+#contents2 > div.banner h2 {text-align: center; font-weight: 400; font-family: 'Nunito Sans', sans-serif; font-size: 35px; margin-bottom: 80px;}
 
-#contents2 > div.thum1 {float: left;}
-#contents2 > div.thum1 li img { width: 200px; height: auto; margin-top: 80px; margin-left: 130px;}
-#contents2 > div.thum1:hover li img { transform: scale(-0.7)}
+#contents2 > div.thum1 {position: relative;}
+#contents2 > div.thum1 li img {width: 500px; height: auto; margin-left: 200px;}
+#contents2 > div.thum1 li img:hover {filter: blur(0) grayscale(100%);}
+#contents2 > div.thum1 li h3 {position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate( -50%, -50% );
+    text-align: center;
+    padding: 5px 10px;
+    font-size: 30px; color: #ffff; font-weight: 100; font-family: 'Nunito Sans', sans-serif; font-style: italic;}
+#contents2 > div.thum1 li span p {position: absolute;
+	top: 90%;
+	left: 50%;
+	transform: translate( -50%, -50% );
+    padding: 5px 10px;
+    font-size: 13px; color: #ffff; font-weight: 500; font-family: 'Nunito Sans', sans-serif;}
 
-#contents2 > div.thum2 {float: left;}
-#contents2 > div.thum2 li img { width: 200px; height: auto; margin-top: 80px; margin-left: 20px;}
-#contents2 > div.thum2:hover li img { transform: scale(-0.7)}
-
-#contents2 > div.thum3 {float: left;}
-#contents2 > div.thum3 li img { width: 200px; height: auto; margin-top: 80px; margin-left: 20px;}
-#contents2 > div.thum3:hover li img { transform: scale(-0.7)}
+#contents2 > div.thum2 {position: relative; margin-top: 30px;}
+#contents2 > div.thum2 li img {width: 500px; height: auto; margin-left: 200px;}
+#contents2 > div.thum2 li img:hover {filter: blur(0) grayscale(100%);}
+#contents2 > div.thum2 li h3 {position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate( -50%, -50% );
+    text-align: center;
+    padding: 5px 10px;
+    font-size: 30px; color: #ffff; font-weight: 100; font-family: 'Nunito Sans', sans-serif; font-style: italic;}
+#contents2 > div.thum2 li span p {position: absolute;
+	top: 60%;
+	left: 50%;
+	transform: translate( -50%, -50% );
+    padding: 5px 10px;
+    font-size: 15px; color: #ffff; font-weight: 600; font-family: 'Nunito Sans', sans-serif;}
 
 /* footer */
 #footer p {font-family: 'Nunito Sans', sans-serif; font-weight: 100; font-size: 14px; font-style: ; text-align: center; padding-bottom: 10px; color: #313131;}
