--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ a {color: #333; text-decoration:none;}
 .clearfix::before, .clearfix::after {display: block; content: '';clear: both;}
 
 /* layout */
-#wrap {width: 900px; height: 4850px; background: #fff; margin: 0 auto;}
+#wrap {width: 900px; height: 5730px; background: #fff; margin: 0 auto;}
 #header {margin-top: 50px;  text-align: center; height: 200px; background: #fff;}
 
 #banner {width: 900px; text-align: center; height: 600px; overflow: hidden;}
@@ -22,7 +22,7 @@ a {color: #333; text-decoration:none;}
 #contents1 > div.imgli4 {float: left; width: 450px; height: 430px; background: #fff; margin-top: 60px;}
 #contents1 > div.imgli5 {float: right; width: 450px; height: 430px; background: #fff; margin-top: 60px;}
 #contents1 > div.imgli6 {float: left; width: 450px; height: 430px; background: #fff; margin-top: 60px;}
-#contents2 {margin-top: 2000px; height: 130px; background: #ffF; border-top: 0.8px solid #000; padding-top: 70px; }
+#contents2 > div.banner {margin-top: 1975px; height: 130px; background: #ffF; border-top: 0.8px solid #000; padding-top: 70px; }
 #footer {height: 70px; background: #ffF; border-top: 0.8px solid #000; padding-top: 50px; }
 
 /* header */
@@ -100,40 +100,29 @@ a {color: #333; text-decoration:none;}
 /* contents2 */
 #contents2 > div.banner h2 {text-align: center; font-weight: 400; font-family: 'Nunito Sans', sans-serif; font-size: 35px; margin-bottom: 80px;}
 
-#contents2 > div.thum1 {position: relative;}
-#contents2 > div.thum1 li img {width: 500px; height: auto; margin-left: 200px; filter:grayscale(100%)}
+#contents2 > div.thum1 {position: relative; margin-bottom: 0px; }
+#contents2 > div.thum1 li img {width: 900px; height: auto; margin-left: 0px; filter:grayscale(100%);}
 #contents2 > div.thum1 li img:hover {filter: grayscale(0%);}
 #contents2 > div.thum1 li h3 {position: absolute;
-	top: 50%;
+	top: 45%;
 	left: 50%;
-	transform: translate( -50%, -50% );
+    transform: translate( -50%, -50% );
     text-align: center;
-    padding: 5px 10px;
-    font-size: 35px; color: #ffff; font-weight: 500; font-family: 'Nunito Sans', sans-serif; font-style: italic;}
+    padding: 0px 0px;
+    font-size: 25px; color: #ffff; font-weight: 1000; font-family: 'Nunito Sans', sans-serif;}
 #contents2 > div.thum1 li span p {position: absolute;
-	top: 90%;
-	left: 50%;
-	transform: translate( -50%, -50% );
-    padding: 5px 10px;
-    font-size: 13px; color: #ffff; font-weight: 100; font-family: 'Nunito Sans', sans-serif;}
-
-#contents2 > div.thum2 {position: relative; margin-top: 30px;}
-#contents2 > div.thum2 li img {width: 500px; height: auto; margin-left: 200px; filter:grayscale(100%)}
-#contents2 > div.thum2 li img:hover {filter: grayscale(0%);}
-#contents2 > div.thum2 li h3 {position: absolute;
 	top: 50%;
 	left: 50%;
 	transform: translate( -50%, -50% );
-    text-align: center;
-    padding: 5px 10px;
-    font-size: 35px; color: #ffff; font-weight: 500; font-family: 'Nunito Sans', sans-serif; font-style: italic;}
-#contents2 > div.thum2 li span p {position: absolute;
-	top: 90%;
+    padding: 0px 0px;
+    font-size: 18px; color: #ffff; font-weight: 10; font-family: 'Nunito Sans', sans-serif; font-style: italic;}
+#contents2 > div.thum1 li h2 {position: absolute;
+	top: 55%;
 	left: 50%;
 	transform: translate( -50%, -50% );
-    padding: 5px 10px;
-    font-size: 13px; color: #ffff; font-weight: 100; font-family: 'Nunito Sans', sans-serif;}
-
+    text-align: center;
+    padding: 0px 0px;
+    font-size: 18px; color: #fff; font-weight: 10; font-family: 'Nunito Sans', sans-serif; font-style: italic;}
 
 /* footer */
 #footer p {font-family: 'Nunito Sans', sans-serif; font-weight: 100; font-size: 14px; font-style: ; text-align: center; padding-bottom: 10px; color: #313131;}
