--- a/style.css
+++ b/style.css
@@ -37,7 +37,8 @@ a {color: #333; text-decoration:none;}
 #contents1 > div.imgli0 li img {width: 350px;}
 #contents1 > div.imgli0:hover li img {border-radius: 50%;}
 #contents1 > div.imgli0 li span {display: block; margin-top: 10px;
-                    font-size: 30px; font-family: "Georgia"; font-weight: 200; text-decoration: underline 2px;}
+                    font-size: 30px; font-family: "Georgia"; font-weight: 200; text-decoration: underline 2px; text-decoration-skip-ink: none; /* Safari 관련 */
+  -webkit-text-decoration-skip: none; /* iOS Safari 대응 */}
 #contents1 > div.imgli0 li p {display: block; margin-top: 10px;
                 font-size: 18px; color: #808080; font-weight: 300; font-family: 'Nunito Sans', sans-serif;}
 
@@ -47,7 +48,8 @@ a {color: #333; text-decoration:none;}
 #contents1 > div.imgli1 li img {width: 350px;}
 #contents1 > div.imgli1:hover li img {border-radius: 50%;}
 #contents1 > div.imgli1 li span {display: block; margin-top: 10px;
-                    font-size: 30px; font-family: "Georgia"; font-weight: 100; text-decoration: underline 2px;}
+                    font-size: 30px; font-family: "Georgia"; font-weight: 100; text-decoration: underline 2px; text-decoration-skip-ink: none; /* Safari 관련 */
+  -webkit-text-decoration-skip: none; /* iOS Safari 대응 */}
 #contents1 > div.imgli1 li p {display: block; margin-top: 10px;
                 font-size: 18px; color: #808080; font-weight: 300; font-family: 'Nunito Sans', sans-serif;}
 
@@ -57,7 +59,8 @@ a {color: #333; text-decoration:none;}
 #contents1 > div.imgli2 li img {width: 350px;}
 #contents1 > div.imgli2:hover li img {border-radius: 50%;}
 #contents1 > div.imgli2 li span {display: block; margin-top: 10px;
-                    font-size: 30px; font-family: "Georgia"; font-weight: 100; text-decoration: underline 2px;}
+                    font-size: 30px; font-family: "Georgia"; font-weight: 100; text-decoration: underline 2px; text-decoration-skip-ink: none; /* Safari 관련 */
+  -webkit-text-decoration-skip: none; /* iOS Safari 대응 */}
 #contents1 > div.imgli2 li p {display: block; margin-top: 10px;
                 font-size: 18px; color: #808080; font-weight: 300; font-family: 'Nunito Sans', sans-serif;}
 
@@ -109,28 +112,36 @@ a {color: #333; text-decoration:none;}
     transform: translate( -50%, -50% );
     text-align: center;
     padding: 0px 0px;
-    font-size: 60px; color: #ffff; font-weight: 500; font-family: 'Nunito Sans', sans-serif; text-decoration: underline 3px;}
+    font-size: 60px; color: #ffff; font-weight: 500; font-family: 'Nunito Sans', sans-serif; text-decoration: underline 3px;
+	text-decoration-skip-ink: none; /* Safari 관련 */
+        -webkit-text-decoration-skip: none; /* iOS Safari 대응 */}
 #contents2 > div.thum1 li h3.h3l {position: absolute;
 	top: 38%;
 	left: 50%;
     transform: translate( -50%, -50% );
     text-align: center;
     padding: 0px 0px;
-    font-size: 60px; color: #000000; font-weight: 500; font-family: 'Nunito Sans', sans-serif; text-decoration: underline 3px;}
+    font-size: 60px; color: #000000; font-weight: 500; font-family: 'Nunito Sans', sans-serif; text-decoration: underline 3px;
+	text-decoration-skip-ink: none; /* Safari 관련 */
+        -webkit-text-decoration-skip: none; /* iOS Safari 대응 */}
 #contents2 > div.thum1 li span p {position: absolute;
 	top: 63%;
 	left: 50%;
     transform: translate( -50%, -50% );
     text-align: center;
     padding: 0px 0px;
-    font-size: 60px; color: #ffff; font-weight: 500; font-family: 'Nunito Sans', sans-serif; text-decoration: underline 3px;}
+    font-size: 60px; color: #ffff; font-weight: 500; font-family: 'Nunito Sans', sans-serif; text-decoration: underline 3px;
+	text-decoration-skip-ink: none; /* Safari 관련 */
+        -webkit-text-decoration-skip: none; /* iOS Safari 대응 */}
 #contents2 > div.thum1 li h2 {position: absolute;
 	top: 50%;
 	left: 50%;
 	transform: translate( -50%, -50% );
     text-align: center;
     padding: 0px 0px;
-    font-size: 60px; color: #fff; font-weight: 500; font-family: 'Nunito Sans', sans-serif; text-decoration: underline 3px;}
+    font-size: 60px; color: #fff; font-weight: 500; font-family: 'Nunito Sans', sans-serif; text-decoration: underline 3px;
+	text-decoration-skip-ink: none; /* Safari 관련 */
+        -webkit-text-decoration-skip: none; /* iOS Safari 대응 */}
 
 /* footer */
 #footer p {font-family: 'Nunito Sans', sans-serif; font-weight: 100; font-size: 20px; font-style: ; text-align: center; padding-bottom: 10px; color: #313131;}
